--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>app02</title>
 <link href="appno03.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="appno02.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/a1ca779035.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
